# discord.py-self-mcp

./: .env.example  .gitignore  .npmignore  .releaserc.json  CHANGELOG.md  HANDOFF.md  INSTALL.md  README.md  RELEASE.md  SKILL.md  index.js  mcp.example.json  nightshift-test-gap.md  package-lock.json  package.json  pyproject.toml  requirements.txt  server.json  setup-wizard.js  test-captcha.mjs  test-invite.mjs
.codex/: INSTALL.md
.github/workflows/: release.yml
.opencode/: INSTALL.md
discord_py_self_mcp/: bot.py  cli_runtime.py  logging_utils.py  main.py  rate_limiter.py  setup.py  tool_utils.py
discord_py_self_mcp/captcha/: __init__.py  agent.py  browser.py  motion.py  solver.py
discord_py_self_mcp/tools/: __init__.py  channels.py  discrawl.py  embed.py  guilds.py  interactions.py  invites.py  members.py  messages.py  presence.py  profile.py  reactions.py  registry.py  relationships.py  threads.py  voice.py
discord_selfbot_mcp/: bot.py  main.py  setup.py
discord_selfbot_mcp/tools/: __init__.py  channels.py  guilds.py  interactions.py  messages.py  registry.py  threads.py
docs/: add-to-opencode.html
scripts/: daemon.py  dcli.py  postinstall.js  sync-release-version.mjs
src/: setup.ts
src/core/: config.ts
src/core/browser/: captcha-solver.ts
src/discord/: client.ts
tests/: test_daemon.py  test_dcli.py  test_discrawl.py  test_dms.py  test_guilds.py  test_interactions.py  test_logging_utils.py  test_main.py  test_members.py  test_messages.py  test_mock.py  test_profile.py  test_rate_limiter.py  test_registry.py  test_threads.py
(+2 files in other folders)
