[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-selfbot-mcp"
version = "0.1.0"
authors = [
  { name="Microck", email="your.email@example.com" },
]
description = "A Discord Selfbot MCP server using discord.py-self"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord.py-self==2.0.1",
    "mcp",
    "python-dotenv",
    "playwright",
    "audioop-lts; python_version >= '3.13'"
]

[project.scripts]
discord-selfbot-mcp = "discord_selfbot_mcp.main:main"
discord-selfbot-mcp-setup = "discord_selfbot_mcp.setup:main"
